Fix thick horizontal scrollbar on product thumbnail gallery

--- a/storefront/app/globals.css
+++ b/storefront/app/globals.css
@@ -150,6 +150,7 @@
 
 ::-webkit-scrollbar {
   width: 0.25rem;
+  height: 0.25rem;
 }
 
 ::-webkit-scrollbar-thumb {
